# moka-mcpserver

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  moka-mcp-server-需求分析与技术调研.md  pyproject.toml
src/moka_mcp/: __init__.py  client.py  config.py  directory.py  errors.py  permissions.py  server.py
src/moka_mcp/tools/: __init__.py  candidates.py  departments.py  jobs.py  offers.py  pipelines.py  talent_pools.py
src/moka_mcp/utils/: pagination.py  sanitize.py
tests/: test_permissions.py  test_sanitize.py
