[project]
name = "moka-mcp-server"
version = "0.1.0"
description = "MCP Server for Moka HR recruitment system (read-only, phase 1)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "uvicorn>=0.27.0",
    "starlette>=0.37.0",
]

[project.scripts]
moka-mcp-server = "moka_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moka_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
